chore(composer): add doc and issues urls

--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "trctranslate"
     ],
     "support": {
-        "docs": "???",
-        "issues": "???"
+        "docs": "https://github.com/the-red-corner/trctranslate",
+        "issues": "https://github.com/the-red-corner/trctranslate/issues"
     },
     "license": "MIT",
     "authors": [
